# select

./: .gitignore  Cargo.toml  LICENSE
.select/: select.toml
src/: cli.rs  constants.rs  editor.rs  git.rs  lib.rs  output.rs
src/command/: .print.rs.swp  .select.rs.swp  mod.rs  print.rs  render.rs  sel.rs  select.rs  template.rs  utils.rs
src/command/feature/: mod.rs
src/command/template/: mod.rs  render.rs
src/config/: config.rs  mod.rs  selection.rs
src/feature/: mod.rs
src/template/: mod.rs
src/token/: mod.rs
