[package]
name = "select"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "sel"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
color-eyre = "0.6"
ignore = "0.4"
minijinja = "2.11"
pathdiff = "0.2"
serde = { version = "1.0", features = ["derive"] }
tempfile = "3.20"
toml = "0.9"
